--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+  "functions": {
+    "api/index.js": { "runtime": "nodejs20.x" }
+  }
 }
