--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,5 +1,11 @@
 {
+  "version": 2,
   "functions": {
-    "api/index.js": { "runtime": "nodejs20.x" }
-  }
+    "api/index.js": {
+      "runtime": "nodejs20.x"
+    }
+  },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/index.js" }
+  ]
 }
