--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,11 +1,5 @@
 {
-  "version": 2,
   "functions": {
-    "api/index.js": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/index.js" }
-  ]
+    "api/index.js": { "runtime": "nodejs25.0.0" }
+  }
 }
