--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "nodemon index.js"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,4 +26,5 @@
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
+  
 }
