--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "functions": {
-    "api/index.js": { "runtime": "nodejs22.x" }
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "api/index.js"
+    }
+  ]
 }
