--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "/api/index.js",   // Mantenemos esto para que Vercel sepa que es el punto de entrada de la API.
+      "src": "/api/index.js", 
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["../config/**"] // ¡AÑADE ESTO! Es crucial para copiar tu carpeta 'config'.
+        "includeFiles": ["../config/**"] 
       }
     }
   ],
