--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,22 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "/api/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "../config/**",
+          "../controllers/**",
+          "../assets/**",
+          "../models/**",
+          "../routes/**",
+          "../services/**",
+          "../uploads/**"
+        ]
+      }
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
