--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,10 @@
-{
-  "version": 2,
-  "builds": [
     {
-      "src": "/backend/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "/frontend/build/web/**",
-      "use": "@vercel/static"
+      "version": 2,
+      "rewrites": [
+        {
+          "source": "/(.*)",
+          "destination": "/index.html"
+        }
+      ]
     }
-  ],
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/backend/index.js"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/frontend/build/web/index.html"
-    }
-  ]
-}
+    
