--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,23 @@
     {
       "version": 2,
+      "builds": [
+        {
+          "src": "/backend/index.js",
+          "use": "@vercel/node"
+        },
+        {
+          "src": "/frontend/build/web/**",
+          "use": "@vercel/static"
+        }
+      ],
       "rewrites": [
         {
+          "source": "/api/:path*",
+          "destination": "/backend/index.js"
+        },
+        {
           "source": "/(.*)",
-          "destination": "/index.html"
+          "destination": "/frontend/build/web/index.html"
         }
       ]
     }
