--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,19 @@
+{
+  "version": 2,
+  "builds": [
     {
-      "version": 2,
-      "builds": [
-        {
-          "src": "/backend/index.js",
-          "use": "@vercel/node"
-        },
-        {
-          "src": "/frontend/build/web/**",
-          "use": "@vercel/static"
-        }
-      ],
-      "rewrites": [
-        {
-          "source": "/api/:path*",
-          "destination": "/backend/index.js"
-        },
-        {
-          "source": "/(.*)",
-          "destination": "/frontend/build/web/index.html"
-        }
-      ]
+      "src": "backend/index.js",
+      "use": "@vercel/node"
     }
-    
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "backend/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "frontend/build/web/index.html"
+    }
+  ]
+}
