--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,24 @@
-{
-  "version": 2,
-  "builds": [
     {
-      "src": "backend/index.js",
-      "use": "@vercel/node"
+      "version": 2,
+      "builds": [
+        {
+          "src": "/backend/index.js",
+          "use": "@vercel/node"
+        },
+        {
+          "src": "/frontend/build/web/**",
+          "use": "@vercel/static"
+        }
+      ],
+      "rewrites": [
+        {
+          "source": "/api(/.*)?",
+          "destination": "/backend/index.js"
+        },
+        {
+          "source": "/(.*)",
+          "destination": "/frontend/build/web/index.html"
+        }
+      ]
     }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "backend/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/build/web/index.html"
-    }
-  ]
-}
+    
