--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,31 @@
+{
+  "version": 2,
+  "builds": [
     {
-      "version": 2,
-      "builds": [
-        {
-          "src": "/backend/index.js",
-          "use": "@vercel/node"
-        },
-        {
-          "src": "/frontend/build/web/**",
-          "use": "@vercel/static"
-        }
-      ],
-      "rewrites": [
-        {
-          "source": "/api(/.*)?",
-          "destination": "/backend/index.js"
-        },
-        {
-          "source": "/(.*)",
-          "destination": "/frontend/build/web/index.html"
-        }
-      ]
+      "src": "backend/index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "frontend/build/web/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "backend/uploads/**",
+      "use": "@vercel/static"
     }
-    
+  ],
+  "rewrites": [
+    {
+      "source": "/api(/.*)?",
+      "destination": "backend/index.js"
+    },
+    {
+      "source": "/uploads/(.*)",
+      "destination": "backend/uploads/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "frontend/build/web/index.html"
+    }
+  ]
+}
