--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,21 @@
-{
-  "version": 2,
-  "builds": [
-    { "src": "backend/index.js", "use": "@vercel/node" },
-    { "src": "backend/uploads/**", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "backend/index.js" },
-    { "src": "/uploads/(.*)", "dest": "backend/uploads/$1" },
-
     {
-      "src": "/(main\\.dart\\.js|flutter\\.js|assets/.*|icons/.*|favicon\\.png|manifest\\.json)",
-      "dest": "frontend/build/web/$1",
-      "headers": { "Cache-Control": "s-maxage=31536000, immutable" }
-    },
-
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/build/web/index.html"
+      "version": 2,
+      "builds": [
+        { "src": "backend/index.js", "use": "@vercel/node" }
+      ],
+      "rewrites": [
+        {
+          "source": "/api(/.*)?",
+          "destination": "backend/index.js"
+        },
+        {
+          "source": "/uploads/(.*)",
+          "destination": "backend/uploads/$1"
+        },
+        {
+          "source": "/((?!.*\\.[^.]+$).*)",
+          "destination": "frontend/build/web/index.html"
+        }
+      ]
     }
-  ]
-}
+    
