--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,9 @@
+{
+  "version": 2,
+  "rewrites": [
     {
-      "version": 2,
-      "builds": [
-        { "src": "backend/index.js", "use": "@vercel/node" }
-      ],
-      "routes": [
-        {
-          "src": "/api/(.*)",
-          "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-          "dest": "backend/index.js"
-        },
-        {
-          "src": "/uploads/(.*)",
-          "dest": "backend/uploads/$1"
-        },
-        {
-          "handle": "filesystem"
-        },
-        {
-          "src": "/(.*)",
-          "dest": "frontend/build/web/index.html"
-        }
-      ]
+      "source": "/(.*)",
+      "destination": "/frontend/build/web/index.html"
     }
-    
+  ]
+}
