--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,35 @@
     {
       "version": 2,
       "builds": [
-        { "src": "api/index.js", "use": "@vercel/node" }
+        {
+          "src": "frontend/build/web/**/*",
+          "use": "@vercel/static"
+        },
+        {
+          "src": "api/index.js",
+          "use": "@vercel/node"
+        }
       ],
       "routes": [
         {
           "src": "/api/(.*)",
-          "dest": "api/index.js"
+          "dest": "/api/index.js"
         },
         {
-          "handle": "filesystem"
+          "src": "/assets/(.*)",
+          "dest": "/frontend/build/web/assets/$1"
+        },
+        {
+          "src": "/icons/(.*)",
+          "dest": "/frontend/build/web/icons/$1"
+        },
+        {
+          "src": "/(.*\\.(?:js|css|png|jpg|jpeg|gif|ico|svg|map))",
+          "dest": "/frontend/build/web/$1"
         },
         {
           "src": "/(.*)",
-          "dest": "frontend/build/web/index.html"
+          "dest": "/frontend/build/web/index.html"
         }
       ]
     }
