--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,43 @@
+{
+  "version": 2,
+  "builds": [
     {
-      "version": 2,
-      "builds": [
-        {
-          "src": "frontend/build/web/**/*",
-          "use": "@vercel/static"
-        },
-        {
-          "src": "api/index.js",
-          "use": "@vercel/node"
-        }
-      ],
-      "routes": [
-        {
-          "src": "/api/(.*)",
-          "dest": "/api/index.js"
-        },
-        {
-          "src": "/assets/(.*)",
-          "dest": "/frontend/build/web/assets/$1"
-        },
-        {
-          "src": "/icons/(.*)",
-          "dest": "/frontend/build/web/icons/$1"
-        },
-        {
-          "src": "/(.*\\.(?:js|css|png|jpg|jpeg|gif|ico|svg|map))",
-          "dest": "/frontend/build/web/$1"
-        },
-        {
-          "src": "/(.*)",
-          "dest": "/frontend/build/web/index.html"
-        }
-      ]
+      "src": "frontend/build/web/**/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "api/uploads/**/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
-    
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/uploads/(.*)",
+      "dest": "/api/uploads/$1"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/frontend/build/web/assets/$1"
+    },
+    {
+      "src": "/icons/(.*)",
+      "dest": "/frontend/build/web/icons/$1"
+    },
+    {
+      "src": "/(.*\\.(?:js|css|png|jpg|jpeg|gif|ico|svg|map))",
+      "dest": "/frontend/build/web/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend/build/web/index.html"
+    }
+  ]
+}
