--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,5 @@
+# Archivo: frontend/.gitignore
+
 # Miscellaneous
 *.class
 *.log
@@ -37,7 +39,10 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Ignore all build outputs.
+/build/
+
+# <<<<< LA REGLA MÁGICA >>>>>
+# Except for the web build, which we want to deploy to Vercel.
+# The "!" makes an exception to the "/build/" rule above.
+!/build/web/
